--- a/HygieaWasteZero/app/src/main/res/values/strings.xml
+++ b/HygieaWasteZero/app/src/main/res/values/strings.xml
@@ -1,3 +1,4 @@
 <resources>
     <string name="app_name">HygieaWasteZero</string>
+    <string name="serverUrl">http://192.168.0.19:8000/trash</string>
 </resources>
